# carbon-footprint-tracker

./: API_SPECIFICATION.md  APP_ENGINE_DEPLOYMENT_GUIDE.md  GCP_DEPLOYMENT_GUIDE.md  GCP_IMPLEMENTATION_PLAN.md  GCP_STEP_BY_STEP_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START_COMMANDS.md  README.md  TECHNICAL_ARCHITECTURE.md  carbon-footprint-platform-design.md  pyrightconfig.json
backend/: .env.example  .gcloudignore  README.md  UV_SETUP_GUIDE.md  app.py  app.yaml  pyproject.toml  requirements.txt  requirements.txt_old  setup-uv.ps1  setup-uv.sh
backend/config/: firestore.py
backend/routes/: activities.py  auth.py  calculations.py  challenges.py  community.py  dashboard.py  insights.py  quiz.py
backend/services/: carbon_calculator.py
frontend/: IMPLEMENTATION_SUMMARY.md  NEXTAUTH_SETUP.md  README.md  auth.ts  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/challenges/: page.tsx
frontend/app/community/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/tracking/: page.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
frontend/types/: index.ts
